fix: fix low contrast text issue

--- a/src/styles/blocks/bread-crumbs.css
+++ b/src/styles/blocks/bread-crumbs.css
@@ -24,5 +24,5 @@
 }
 
 .bread-crumbs__element--active {
-  color: #aba9a7;
+  opacity: 0.4;
 }
